--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,10 @@
 p {
   font-family: verdana;
   font-size: 50px;
-  color: red;
+  color: rgba(255, 0, 0, 0);
   text-align: center;
 }
 
  body {
-  background-color: lightblue;
+  background-color: black;
 }
