--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,10 @@
 p {
   font-family: verdana;
   font-size: 50px;
-  color: rgba(255, 0, 0, 0);
+  color: rgba(38, 0, 255, 0);
   text-align: center;
 }
 
  body {
-  background-color: black;
+  background-color: green;
 }
