--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 p {
   font-family: verdana;
   font-size: 50px;
-  color: rgba(38, 0, 255, 0);
+  color: rgb(187, 255, 0);
   text-align: center;
 }
 
